--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: encryptedBunny
 github_username:  encryptedBunny
 
 # Build settings
-theme: minima
+remote_theme: sighingnow/jekyll-gitbook
 plugins:
   - jekyll-feed
 
